--- a/public/home/Profile/styles.css
+++ b/public/home/Profile/styles.css
@@ -11,6 +11,15 @@ top: 0px;
 background: #502C6C;
 }
 
+#logo {
+
+position: absolute;
+width: 110px;
+height: 110px;
+left: 114px;
+top: 6px;
+}
+
 
 #group8 {
 
@@ -26,7 +35,7 @@ top: 133px;
 #fullName {
 
 position: absolute;
-width: 109px;
+width: 180px;
 height: 19px;
 left: 262px;
 top: 155px;
@@ -34,7 +43,7 @@ top: 155px;
 font-family: Open Sans;
 font-style: normal;
 font-weight: bold;
-font-size: 20px;
+font-size: 18px;
 line-height: 27px;
 
 color: #502C6C;
@@ -52,7 +61,7 @@ top: 189px;
 font-family: Open Sans;
 font-style: normal;
 font-weight: normal;
-font-size: 17px;
+font-size: 16px;
 line-height: 23px;
 
 color: #502C6C;
@@ -90,6 +99,24 @@ left: 890px;
 top: 73px;
 
 }
+
+#homeText {
+    
+position: absolute;
+    width: 59px;
+    height: 18px;
+    left: 820px;
+    top: 51px;
+
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 35px;
+
+    color: #502C6C;
+}
+
 
 #btnLogOutText {
 	position: absolute;
@@ -131,17 +158,6 @@ top: 73px;
 
 	  color: #1E1E1E;
 
-}
-
-
-
-#logo {
-
-position: absolute;
-width: 110px;
-height: 110px;
-left: 114px;
-top: 6px;
 }
 
 
@@ -222,6 +238,19 @@ line-height: 19px;
 
 color: #000000;
 }
+
+#seeDetailsBtn {
+
+position: absolute;
+width: 344px;
+height: 47px;
+left: 121px;
+top: 548px;
+
+background: #F261F7;
+border-radius: 8px;
+}
+
 
 
 
